test/negative/402_unknown_constructor.err
402_unknown_constructor.fx:3:30: error: the appropriate match for 'C' of type '402_unknown_constructor.ab_t@9' is not found.

1 errors occured during type checking.
